chore: Re-encrypt secrets with a new, clean GPG key

--- a/values.yaml
+++ b/values.yaml
@@ -1,8 +1,15 @@
 -----BEGIN PGP MESSAGE-----
 
-hF4DhQQn8BNjWZsSAQdAFIsS5IoHezWGdLM9vtrO14pxWG+2G5T3FLGSHuFLOx0w
-QHsR+/MpZyvbvxINAhyHRu9JqxkldBVLzyDwXtvB84AHm8GhqsyWmNLjrFfFgVC/
-1FABCQIQRGpDOuiDY/OsI1sZSqEge8tW6YmJGaPlF0+2ZzMsGxdawGVwbJ8LKsdt
-J2uNzph4SR9RbYn6XsqsnudYwIjEJxkXbN1M+hZAWB9kOQ==
-=w7em
+hQGMA8KM/d35Xwq1AQwApB6LofUmayoeJYx3WWwIosyqay9xexaLpvtdvFKnrudB
+nFWLvKFpExc0RIVdh4y947wS8YrnkfCWl7WURPASFny8ZYeUc65ZxTV1FNLMj5sZ
+wIkVfoD3ss4D2ITM5U2aXYuOBkWqQnbsKGREr9+FPclcgR1xbrlHfeHIsAISSAtl
+GwvY2zENC6NBLXfzBi2teHB15Mm1vupzkl7Tm6zD6SzK2pMoyQm+F/Jpa5YrrSy7
+5vgOV3eARjRA/Mvi2bihpE050s7mVLgC6+f111V5+vak6mrzxlby47Vc+fpXM0Z+
+X6qFjTgoFfjSyFzhvW1VbK4Hz4joz6J2q+yO8gn2ovQibu8c0QuLgWdFFx0CQwuo
+rVvqGYBns0GVSelgss/GT3plpz/MPN3UFtdpQGS2x7yOc81NI6volNhdjA+Uu3F7
+S+LvtXxVq+NOCGqwezAhH+lt3D7fG89lAFvVJkxWSuc3amWOelZmfInGn6ihNh2s
+/FiLh7pGuG00AQV1RaBS1FABCQIQ4t6QwDHY4XUc7JyGip3WG8clLx+zFyY7+EZ9
+7b7oaQwQKdF4TSgAo6h+GgimuDHdqEW13p9BKqurPxnjOf5Q1tzOJIJyYZLXOsUU
+Cw==
+=GnDf
 -----END PGP MESSAGE-----
